fixing actions interaction with pytest

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
     hooks:
       - id: pytest
         name: pytest
-        entry: /bin/bash -c 'MPICH_OFI_STARTUP_CONNECT=0 FI_PROVIDER=tcp MPI4PY_RC_FINALIZE=0 pytest'
+        entry: conda run -n fenicsx-env pytest
         language: system
         types: [python]
         pass_filenames: false
